plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.graalvm.buildtools.native' version '0.11.3'
	id 'org.asciidoctor.jvm.convert' version '4.0.5'
}

group = 'de.hertsch'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
	set('wiremockVersion', '3.9.2')
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}


tasks.withType(JavaCompile) {
	options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform() {
		includeTags System.getProperty('groups') ?: ''
	}

	testLogging {
		showStandardStreams = true
	}

	jvmArgs += [
		'--add-modules', 'jdk.incubator.vector',
		'--enable-native-access=ALL-UNNAMED'
	]
}

tasks.named('bootRun') {
	jvmArgs += [
		'--add-modules', 'jdk.incubator.vector',
		'--enable-native-access=ALL-UNNAMED'
	]
}

tasks.named('asciidoctor') {
	inputs.dir snippetsDir
	dependsOn test
}
